Updated Micro Project on dated 09-09-2023

--- a/index.html
+++ b/index.html
@@ -1,58 +1,60 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-    <title>Micro Project 1</title>
-  </head>
-  <body>
-    <div class="toppart">
-      <div class="topleftside">
-        <h1>An inspiring design delivered to your inbox every morning</h1>
 
-        <p>
-          Our team scouts the internet for the best designs, illustrations and
-          art and delivers a truly inspiring one every day to your inbox
-        </p>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <title>Micro Project 1</title>
+</head>
 
-        <h5>Show me how it looks</h5>
+<body>
+  <div class="toppart">
+    <div class="topleftside">
+      <h1>An inspiring design delivered to your inbox every morning</h1>
 
-        <form action="">
-          <input name="e-mail" placeholder=" Your e-mail address" type="text" />
-          <button>Register Now</button>
-        </form>
+      <p>
+        Our team scouts the internet for the best designs, illustrations and
+        art and delivers a truly inspiring one every day to your inbox
+      </p>
 
-        <h6>Free - No Spam - No Data Sharing</h6>
-      </div>
+      <h5>Show me how it looks</h5>
 
-      <div class="toprightside">
-        <img class="vectorimage" src="images/dweep1.png" alt="vector" />
-      </div>
+      <form action="" class="formcontainer">
+        <input name="e-mail" placeholder=" Your e-mail address" type="text" />
+        <button>Register Now</button>
+      </form>
+
+      <h6>Free - No Spam - No Data Sharing</h6>
     </div>
 
-    <div class="bottompart">
-      <div class="leftside">
-        <p>Prompt Generator</p>
-        <p>Dweep Daily</p>
-        <p>All Contributors</p>
-        <p>Your data on Dweep.io</p>
-        <p>Contribute to Dweep</p>
+    <div class="toprightside">
+      <img class="vectorimage" src="images/dweep1.png" alt="vector" />
+    </div>
+  </div>
+
+  <div class="bottompart">
+    <div class="leftside">
+      <p>Prompt Generator</p>
+      <p>Dweep Daily</p>
+      <p>All Contributors</p>
+      <p>Your data on Dweep.io</p>
+      <p>Contribute to Dweep</p>
+    </div>
+
+    <div class="rightside">
+      <div>
+        <p>Dweep.io</p>
+        <p>Made with love in India</p>
+        <img src="images/LinkedinLogo.png" alt="Linkedin" />
+        <img src="images/InstagramLogo.png" alt="Instagram" />
       </div>
 
-      <div class="rightside">
-        <div>
-          <p>Dweep.io</p>
-          <p>Made with love in India</p>
-          <img src="images/LinkedinLogo.png" alt="Linkedin" />
-          <img src="images/InstagramLogo.png" alt="Instagram" />
-        </div>
-
-        <div class="lastp">
-          <p>hello@dweep.io</p>
-        </div>
+      <div class="lastp">
+        <p>hello@dweep.io</p>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
